formattings has been done to the pre html content

--- a/play.html
+++ b/play.html
@@ -16,18 +16,18 @@ remain behind to speak with Mrs Arbuthnot.</h6>
 _Drawing-room at Hunstanton_, _after dinner_, _lamps lit_.  _Door_ L.C.
                 _Door_ R.C.
 
-[_Ladies seated on sofas_.]
-MRS. ALLONBY.  What a comfort it is to have got rid of the men for a little!
-LADY STUTFIELD.  Yes; men persecute us dreadfully, don’t they?
-MRS. ALLONBY.  Persecute us?  I wish they did.
-LADY HUNSTANTON.  My dear!
-MRS. ALLONBY.  The annoying thing is that the wretches can be perfectly
-happy without us.  That is why I think it is every woman’s duty never to
-leave them alone for a single moment, except during this short breathing
-space after dinner; without which I believe we poor women would be
-absolutely worn to shadows.
-[_Enter Servants with coffee_.]
-LADY HUNSTANTON.  Worn to shadows, dear?
+[_Ladies seated on sofas_.]</pre>
+<p>MRS. ALLONBY.  What a comfort it is to have got rid of the men for a little!
+    LADY STUTFIELD.  Yes; men persecute us dreadfully, don’t they?
+    MRS. ALLONBY.  Persecute us?  I wish they did.
+    LADY HUNSTANTON.  My dear!</p>
+<p>MRS. ALLONBY.  The annoying thing is that the wretches can be perfectly
+    happy without us.  That is why I think it is every woman’s duty never to
+    leave them alone for a single moment, except during this short breathing
+    space after dinner; without which I believe we poor women would be
+    absolutely worn to shadows.
+    [_Enter Servants with coffee_.]</p>
+<pre>LADY HUNSTANTON.  Worn to shadows, dear?
 MRS. ALLONBY.  Yes, Lady Hunstanton.  It is such a strain keeping men up
 to the mark.  They are always trying to escape from us.
 LADY STUTFIELD.  It seems to me that it is we who are always trying to
