Formatted the content

--- a/play.html
+++ b/play.html
@@ -1,42 +1,36 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Web Apps Assignment 4</title>
-</head>
-<body>
-<h1>Produced by Chaitanya Punaati</h1>
-<h4>A Woman of no Importance</h4>
-<h6>Gerald's mother arrives at the end of an argument between Hester and the upper-class women. 
-Lord Illingworth enters shortly after, and Gerald uses the opportunity to introduce him to 
-Mrs Arbuthnot. The three share an uncomfortable exchange, as Mrs Arbuthnot (to Gerald's dismay) 
-can only partially express her disapproval of Illingworth's offer. Lord Illingworth excuses himself, 
-and Lady Hunstanton calls everyone into her music-room soon after. Illingworth, however, asks to 
-remain behind to speak with Mrs Arbuthnot.</h6>
-<pre>
-_Drawing-room at Hunstanton_, _after dinner_, _lamps lit_.  _Door_ L.C.
-                _Door_ R.C.
+    <head>
+        <title>Web Apps Assignment 4</title>
+    </head>
+    <body>
+        <h1>Produced by Chaitanya Punaati</h1>
+        <h4>A Woman of no Importance</h4>
+        <h6>Gerald's mother arrives at the end of an argument between Hester and the upper-class women. 
+            Lord Illingworth enters shortly after, and Gerald uses the opportunity to introduce him to 
+            Mrs Arbuthnot. The three share an uncomfortable exchange, as Mrs Arbuthnot (to Gerald's dismay) 
+            can only partially express her disapproval of Illingworth's offer. Lord Illingworth excuses himself, 
+            and Lady Hunstanton calls everyone into her music-room soon after. Illingworth, however, asks to 
+            remain behind to speak with Mrs Arbuthnot.</h6>
+            <p>_Drawing-room at Hunstanton_, _after dinner_, _lamps lit_.  _Door_ L.C.
+                _Door_ R.C. </p>
 
-[_Ladies seated on sofas_.]</pre>
-<p>MRS. ALLONBY.  What a comfort it is to have got rid of the men for a little!
-    LADY STUTFIELD.  Yes; men persecute us dreadfully, don’t they?
-    MRS. ALLONBY.  Persecute us?  I wish they did.
-    LADY HUNSTANTON.  My dear!</p>
-<p>MRS. ALLONBY.  The annoying thing is that the wretches can be perfectly
-    happy without us.  That is why I think it is every woman’s duty never to
-    leave them alone for a single moment, except during this short breathing
-    space after dinner; without which I believe we poor women would be
-    absolutely worn to shadows.
-    [_Enter Servants with coffee_.]</p>
-<pre>LADY HUNSTANTON.  Worn to shadows, dear?
-MRS. ALLONBY.  Yes, Lady Hunstanton.  It is such a strain keeping men up
-to the mark.  They are always trying to escape from us.
-LADY STUTFIELD.  It seems to me that it is we who are always trying to
-escape from them.  Men are so very, very heartless.  They know their
-power and use it.
-LADY CAROLINE.  [_Takes coffee from Servant_.]  What stuff and nonsense
-all this about men is!  The thing to do is to keep men in their proper
-place.
-
-</pre>
-</body>
+            <p>[_Ladies seated on sofas_.]</p>
+            <p>MRS. ALLONBY.  What a comfort it is to have got rid of the men for a little!</p>
+            <p>LADY STUTFIELD.  Yes; men persecute us dreadfully, don’t they?</p>
+            <p>MRS. ALLONBY.  Persecute us?  I wish they did.</p>
+            <p>LADY HUNSTANTON.  My dear!</p>
+            <p>MRS. ALLONBY.  The annoying thing is that the wretches can be perfectlyhappy without us. That is 
+                why I think it is every woman’s duty never toleave them alone for a single moment, except during 
+                this short breathing space after dinner; without which I believe we poor women would be absolutely 
+                worn to shadows.</p>
+            <p>[_Enter Servants with coffee_.]</p>
+            <p>LADY HUNSTANTON.  Worn to shadows, dear?</p>
+            <p>MRS. ALLONBY.  Yes, Lady Hunstanton.  It is such a strain keeping men up to the mark. They are 
+                always trying to escape from us.</p>
+            <p>LADY STUTFIELD.  It seems to me that it is we who are always trying to escape from them. Men are so 
+                very, very heartless.  They know their power and use it.</p>
+            <p>LADY CAROLINE.  [_Takes coffee from Servant_.]  What stuff and nonsense all this about men is! 
+                The thing to do is to keep men in their proper place.</p>
+    </body>
 </html>
