Each section of speech & each stage direction has been kept inside paragraph tags

--- a/play.html
+++ b/play.html
@@ -14,23 +14,22 @@
             remain behind to speak with Mrs Arbuthnot.</h6>
             <p>_Drawing-room at Hunstanton_, _after dinner_, _lamps lit_.  _Door_ L.C.
                 _Door_ R.C. </p>
-
             <p>[_Ladies seated on sofas_.]</p>
-            <p>MRS. ALLONBY.  What a comfort it is to have got rid of the men for a little!</p>
-            <p>LADY STUTFIELD.  Yes; men persecute us dreadfully, don’t they?</p>
-            <p>MRS. ALLONBY.  Persecute us?  I wish they did.</p>
-            <p>LADY HUNSTANTON.  My dear!</p>
-            <p>MRS. ALLONBY.  The annoying thing is that the wretches can be perfectlyhappy without us. That is 
+            <h5>MRS. ALLONBY.</h5>  <p>What a comfort it is to have got rid of the men for a little!</p>
+            <h5>LADY STUTFIELD.</h5>  <p>Yes; men persecute us dreadfully, don’t they?</p>
+            <h5>MRS. ALLONBY.</h5>  <p>Persecute us?  I wish they did.</p>
+            <h5>LADY HUNSTANTON.</h5>  <p>My dear!</p>
+            <h5>MRS. ALLONBY.</h5>  <p>The annoying thing is that the wretches can be perfectlyhappy without us. That is 
                 why I think it is every woman’s duty never toleave them alone for a single moment, except during 
                 this short breathing space after dinner; without which I believe we poor women would be absolutely 
                 worn to shadows.</p>
             <p>[_Enter Servants with coffee_.]</p>
-            <p>LADY HUNSTANTON.  Worn to shadows, dear?</p>
-            <p>MRS. ALLONBY.  Yes, Lady Hunstanton.  It is such a strain keeping men up to the mark. They are 
+            <h5>LADY HUNSTANTON.</h5>  <p>Worn to shadows, dear?</p>
+            <h5>MRS. ALLONBY.</h5>  <p>Yes, Lady Hunstanton.  It is such a strain keeping men up to the mark. They are 
                 always trying to escape from us.</p>
-            <p>LADY STUTFIELD.  It seems to me that it is we who are always trying to escape from them. Men are so 
+            <h5>LADY STUTFIELD.</h5>  <p>It seems to me that it is we who are always trying to escape from them. Men are so 
                 very, very heartless.  They know their power and use it.</p>
-            <p>LADY CAROLINE.  [_Takes coffee from Servant_.]  What stuff and nonsense all this about men is! 
+            <h5>LADY CAROLINE.</h5>  <p>[_Takes coffee from Servant_.]</p>  <p>What stuff and nonsense all this about men is! 
                 The thing to do is to keep men in their proper place.</p>
     </body>
 </html>
