css file link has been added to play file

--- a/play.html
+++ b/play.html
@@ -1,35 +1,36 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="wilde.css">
         <title>Web Apps Assignment 4</title>
     </head>
     <body>
         <h1>Produced by Chaitanya Punaati</h1>
         <h4>A Woman of no Importance</h4>
-        <h6>Gerald's mother arrives at the end of an argument between Hester and the upper-class women. 
+        <h6 class = "stagedirection">Gerald's mother arrives at the end of an argument between Hester and the upper-class women. 
             Lord Illingworth enters shortly after, and Gerald uses the opportunity to introduce him to 
             Mrs Arbuthnot. The three share an uncomfortable exchange, as Mrs Arbuthnot (to Gerald's dismay) 
             can only partially express her disapproval of Illingworth's offer. Lord Illingworth excuses himself, 
             and Lady Hunstanton calls everyone into her music-room soon after. Illingworth, however, asks to 
             remain behind to speak with Mrs Arbuthnot.</h6>
-            <p>_Drawing-room at Hunstanton_, _after dinner_, _lamps lit_.  _Door_ L.C.
+            <p class = "stagedirection">_Drawing-room at Hunstanton_, _after dinner_, _lamps lit_.  _Door_ L.C.
                 _Door_ R.C. </p>
-            <p>[_Ladies seated on sofas_.]</p>
-            <h5>MRS. ALLONBY.</h5>  <p>What a comfort it is to have got rid of the men for a little!</p>
-            <h5>LADY STUTFIELD.</h5>  <p>Yes; men persecute us dreadfully, don’t they?</p>
-            <h5>MRS. ALLONBY.</h5>  <p>Persecute us?  I wish they did.</p>
-            <h5>LADY HUNSTANTON.</h5>  <p>My dear!</p>
-            <h5>MRS. ALLONBY.</h5>  <p>The annoying thing is that the wretches can be perfectlyhappy without us. That is 
+            <p class = "stagedirection">[_Ladies seated on sofas_.]</p>
+            <h5 class = "MRSALLONBY">MRS. ALLONBY.</h5>  <p class = "speech">What a comfort it is to have got rid of the men for a little!</p>
+            <h5 class = "LADYSTUTFIELD">LADY STUTFIELD.</h5>  <p class = "speech">Yes; men persecute us dreadfully, don’t they?</p>
+            <h5 class = "MRSALLONBY">MRS. ALLONBY.</h5>  <p class = "speech">Persecute us?  I wish they did.</p>
+            <h5 class = "LADYHUNSTANTON">LADY HUNSTANTON.</h5>  <p class = "speech">My dear!</p>
+            <h5 class = "MRSALLONBY">MRS. ALLONBY.</h5>  <p class = "speech">The annoying thing is that the wretches can be perfectlyhappy without us. That is 
                 why I think it is every woman’s duty never toleave them alone for a single moment, except during 
                 this short breathing space after dinner; without which I believe we poor women would be absolutely 
                 worn to shadows.</p>
-            <p>[_Enter Servants with coffee_.]</p>
-            <h5>LADY HUNSTANTON.</h5>  <p>Worn to shadows, dear?</p>
-            <h5>MRS. ALLONBY.</h5>  <p>Yes, Lady Hunstanton.  It is such a strain keeping men up to the mark. They are 
+            <p class = "stagedirection">[_Enter Servants with coffee_.]</p>
+            <h5 class = "LADYHUNSTANTON">LADY HUNSTANTON.</h5>  <p class = "speech">Worn to shadows, dear?</p>
+            <h5 class = "MRSALLONBY">MRS. ALLONBY.</h5>  <p class = "speech">Yes, Lady Hunstanton.  It is such a strain keeping men up to the mark. They are 
                 always trying to escape from us.</p>
-            <h5>LADY STUTFIELD.</h5>  <p>It seems to me that it is we who are always trying to escape from them. Men are so 
+            <h5 class = "LADYSTUTFIELD">LADY STUTFIELD.</h5>  <p class = "speech">It seems to me that it is we who are always trying to escape from them. Men are so 
                 very, very heartless.  They know their power and use it.</p>
-            <h5>LADY CAROLINE.</h5>  <p>[_Takes coffee from Servant_.]</p>  <p>What stuff and nonsense all this about men is! 
+            <h5 class = "LADYCAROLINE">LADY CAROLINE.</h5>  <p class = "speech">[_Takes coffee from Servant_.]</p>  <p>What stuff and nonsense all this about men is! 
                 The thing to do is to keep men in their proper place.</p>
     </body>
 </html>
