Table has been created

--- a/play.html
+++ b/play.html
@@ -32,5 +32,27 @@
                 very, very heartless.  They know their power and use it.</p>
             <h5 class = "LADYCAROLINE">LADY CAROLINE.</h5>  <p class = "speech">[_Takes coffee from Servant_.]</p>  <p>What stuff and nonsense all this about men is! 
                 The thing to do is to keep men in their proper place.</p>
+
+            <table>
+                <th>Character</th>
+                <th>Actor</th>
+                <th>Offer</th>
+                <tr>
+                    <td>Tom</td>
+                    <td>Rishi</td>
+                    <td>1 lakh dollars</td>
+                </tr>
+                <tr>
+                    <td>Jerry</td>
+                    <td>Bhavana</td>
+                    <td>1.5 lakh dollars</td>
+                </tr>
+                <tr>
+                    <td>Mickey Mouse</td>
+                    <td>Pravallika</td>
+                    <td>2 lakh dollars</td>
+                </tr>
+
+            </table>
     </body>
 </html>
