shadows has been added

--- a/play2.html
+++ b/play2.html
@@ -1,12 +1,13 @@
 <html>
     <head>
         <link rel="stylesheet" href="wilde.css">
+        <h2>And the play continues</h2>
         <title>And the play continues</title>
     </head>
     <body>
         <h5 class = "MRSALLONBY">MRS. ALLONBY.</h5>  <p class = "speech">But what is their proper place, Lady Caroline?</p>
 
-        <h5>LADY CAROLINE.</h5>  <p class = "speech">Looking after their wives, Mrs. Allonby.</p>
+        <h5 class = "LADYCAROLINE">LADY CAROLINE.</h5>  <p class = "speech">Looking after their wives, Mrs. Allonby.</p>
 
         <h5 class = "MRSALLONBY">MRS. ALLONBY.</h5>  <p class = "stagedirection">[_Takes coffee from Servant_.]</p>  <p class = "speech">Really?  And if they’re not married?</p>
     </body>
