Links has been added

--- a/play.html
+++ b/play.html
@@ -52,7 +52,11 @@
                     <td>Pravallika</td>
                     <td>2 lakh dollars</td>
                 </tr>
-
             </table>
+            <a href="play2.html">Link to play2 file</a>
+            <ul>
+                <li> <a href="play.html">Link to play file</a></li>
+                <li><a href="play2.html">Link to Play2 file</a></li>
+            </ul>
     </body>
 </html>
