--- a/play.html
+++ b/play.html
@@ -6,6 +6,8 @@
     </head>
     <body>
         <h1>Produced by Chaitanya Punaati</h1>
+        <div class="icon">
+            <img src="Woman.jpg"> </div>
         <h4>A Woman of no Importance</h4>
         <h6 class = "stagedirection">Gerald's mother arrives at the end of an argument between Hester and the upper-class women. 
             Lord Illingworth enters shortly after, and Gerald uses the opportunity to introduce him to 
@@ -13,6 +15,7 @@
             can only partially express her disapproval of Illingworth's offer. Lord Illingworth excuses himself, 
             and Lady Hunstanton calls everyone into her music-room soon after. Illingworth, however, asks to 
             remain behind to speak with Mrs Arbuthnot.</h6>
+            <img src="Woman of no importance.jpg" style="width: 50vw;">
             <p class = "stagedirection">_Drawing-room at Hunstanton_, _after dinner_, _lamps lit_.  _Door_ L.C.
                 _Door_ R.C. </p>
             <p class = "stagedirection">[_Ladies seated on sofas_.]</p>
