--- a/play2.html
+++ b/play2.html
@@ -10,6 +10,10 @@
         <h5 class = "LADYCAROLINE">LADY CAROLINE.</h5>  <p class = "speech">Looking after their wives, Mrs. Allonby.</p>
 
         <h5 class = "MRSALLONBY">MRS. ALLONBY.</h5>  <p class = "stagedirection">[_Takes coffee from Servant_.]</p>  <p class = "speech">Really?  And if they’re not married?</p>
-        <a href="play.html">play</a>
+        <a href="play.html">Link to play file</a>
+        <ul>
+            <li> <a href="play.html">Link to play file</a></li>
+            <li><a href="play2.html">Link to Play2 file</a></li>
+        </ul>
     </body>
 </html>
